[package]
name = "tars"
version = "0.0.1"
description = "Data structure containers with protected memory"
license = "MIT/ASL2"
readme = "README.md"
authors = ["Sebastien Martini <seb@dbzteam.org>"]

[lib]
name = "tars"

[features]

# Disable mlock calls on memory pages allocations, may be needed in
# environments with restricted resources limits.
no_mlock = []

# Enable detailed statistics collection of memory allocations, should
# be useful only for debugging.
malloc_stats = []
